# vulkan-rs

./: Cargo.toml
assets/shaders/cube/postprocessing/: chromatic_aberration.frag.glsl  fullscreen_triangle.vert.glsl
shader_compilation/: Cargo.toml
src/support/: app.rs  camera.rs  lib.rs  system.rs  vulkan.rs
src/support/vulkan/: cube.rs  device.rs
src/support/vulkan/core/: rendergraph.rs
src/support/vulkan/core/context/: instance.rs
src/support/vulkan/core/resources/: image.rs
