[package]
name = "vulkan-rs"
version = "0.1.0"
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
log = "0.4.11"
simplelog = { version = "0.9.0", features = ["termcolor"] }
winit = "0.24.0"

[lib]
name = "support"
path = "src/support/lib.rs"