[package]
name = "vulkan-rs"
version = "0.1.0"
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
ash = "0.32.0"
ash-window = "0.6.0"
derive_builder = "0.9.0"
image = "0.23.12"
log = "0.4.11"
nalgebra-glm = "0.11.0"
petgraph = "0.5.1"
raw-window-handle = "0.3.3"
simplelog = { version = "0.9.0", features = ["termcolor"] }
vk-mem = { git = "https://github.com/gwihlidal/vk-mem-rs" }
winit = "0.24.0"

[lib]
name = "support"
path = "src/support/lib.rs"